Fixed my readme file

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,10 @@
 ---
-title: "Investigation"
+title: "Viral Coefficient Investigation"
 author: "Johan Jordaan"
 date: "16 August 2016"
-output: html_document
+output: 
+  html_document: 
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
